# Procedural-Trees

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Renderer.cpp  Renderer.h
src/environment/: Sky.cpp  Sky.h  Tree.cpp  Tree.h
src/res/: presets.txt
src/res/shaders/: leaf.shader  sky.shader  tree.shader
